# gostforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ui  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  pr-docx-check.yml
docs/: api.md  architecture.md  builder.md  changelog.md  checks-catalog.md  claude-code-workflow.md  database.md  development-plan.md  page-sections.md  phase-2.5-spec.md  phase-3-api-spec.md  plugins.md  profiles.md  roadmap.md
examples/: README.md  annotate_one.py  batch_check.py  build_coursework.py  check_one.py  fix_one.py
profiles/: example-department.yaml  gost-7.32-2017.yaml  gost-r-2.105-2019.yaml
profiles/community/: msu-vmk-coursework.yaml  spbstu-bachelor-thesis.yaml
scripts/: README.md  deploy.ps1  deploy.sh  lib.ps1  lib.sh  run-ui.ps1  update.ps1  update.sh
src/gostforge/: __init__.py  autocite.py  cli.py  pdf_exporter.py  pdf_importer.py  plugins.py  stats.py
src/gostforge/annotator/: __init__.py  docx_annotator.py
src/gostforge/api/: __init__.py  app.py
src/gostforge/builder/: __init__.py  section_builder.py  templates.py  work_builder.py
src/gostforge/db/: __init__.py  comments.py  connection.py  custom_profiles.py  migrations.py  schema.py  submissions.py
src/gostforge/exporter/: __init__.py  docx_exporter.py  title_block.py
src/gostforge/fixer/: __init__.py  engine.py
src/gostforge/fixer/fixers/: __init__.py  formatting.py  headings.py  lists.py  page_sections.py  text.py  units.py
src/gostforge/model/: __init__.py
src/gostforge/parser/: __init__.py  docx_parser.py
src/gostforge/profile/: __init__.py  schema.py
src/gostforge/validator/: __init__.py  engine.py
src/gostforge/validator/checks/: __init__.py  abbreviations.py  appendices.py  crossrefs.py  figures.py  formatting.py  formulas.py  headings.py  lists.py  page_sections.py  references.py  structure.py  style.py  tables.py  text.py  units.py  volume.py
src/gostforge/web/: __init__.py  app.py  builder_editor.py  dashboard.py  docs_viewer.py  history_viewer.py  profile_editor.py
src/gostforge/web/pages/: __init__.py  builder.py  docs.py  history.py  home.py  normocontrol.py  profile_editor.py  profile_manager.py
src/gostforge/web/pages/builder/: __init__.py  content.py  export.py  structure.py  validation.py
tests/: conftest.py  test_annotator.py  test_annotator_comments.py  test_api.py  test_api_auth.py  test_api_comments.py  test_api_profiles_install.py  test_api_submissions.py  test_app_filter.py  test_app_fix_summary.py  test_autocite.py  test_block_move.py  test_builder.py  test_builder_bugfixes.py  test_builder_deep_structure.py  test_builder_pdf_preview.py  test_builder_readiness.py  test_builder_rich_paragraph.py  test_builder_templates.py  test_builder_ui_extras.py  test_bulk_find_replace.py  test_caption_dash.py  test_check_abbreviations.py  test_check_appendices.py  test_check_crossrefs.py  test_check_figures.py  test_check_formatting.py  test_check_formulas.py  test_check_headings.py  test_check_lists.py  test_check_page_sections.py  test_check_r14_diagnostics.py  test_check_r15_reachability.py  test_check_references.py  test_check_structure.py  test_check_style.py  test_check_tables.py  test_check_text.py  test_check_volume.py  test_cli_annotate.py  (+99 more)
