[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gostforge"
version = "0.1.0"
description = "Конструктор и нормоконтролёр документов по ГОСТу"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "gostforge contributors"},
]
keywords = ["gost", "docx", "normocontrol", "thesis", "coursework"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=4.9",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
gostforge = "gostforge.cli:main"

[project.urls]
Documentation = "https://github.com/yourusername/gostforge/tree/main/docs"
Repository = "https://github.com/yourusername/gostforge"
Issues = "https://github.com/yourusername/gostforge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gostforge = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
