[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gostforge"
version = "0.2.0"
description = "Конструктор и нормоконтролёр документов по ГОСТу"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "gostforge contributors"},
]
keywords = ["gost", "docx", "normocontrol", "thesis", "coursework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=4.9",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30", "streamlit-quill>=0.0.3", "streamlit-sortables>=0.3.1"]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
# Импорт из внешних форматов (PDF). Опционально.
import-formats = ["pdfplumber>=0.10"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-PyYAML",
    "types-openpyxl",
    "streamlit>=1.30",
    "streamlit-quill>=0.0.3",
    "streamlit-sortables>=0.3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
gostforge = "gostforge.cli:main"

[project.urls]
Documentation = "https://github.com/yourusername/gostforge/tree/main/docs"
Repository = "https://github.com/yourusername/gostforge"
Issues = "https://github.com/yourusername/gostforge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gostforge = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # длину строк держит ruff format
    # Проект русскоязычный (docstrings/комментарии на русском по
    # CLAUDE.md), поэтому правила про «неоднозначные» кириллические
    # символы — сплошной шум, а не реальные ошибки.
    "RUF001", # ambiguous unicode в строках
    "RUF002", # ambiguous unicode в docstrings
    "RUF003", # ambiguous unicode в комментариях
    # В коде вёрстки имена переменных зеркалят элементы OOXML (rPr,
    # rFonts, firstLine) и локальные константы (UPPER_CASE) — snake_case
    # разорвал бы связь со спецификацией ECMA-376. Реальных нарушений
    # N806 в проекте нет (проверено), поэтому правило отключено.
    "N806",   # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
# FastAPI-идиома: Depends()/File()/Query() как значения по умолчанию.
"src/gostforge/api/app.py" = ["B008"]
# Тесты используют короткие алиасы импортов (LB, _TR, _LB) для краткости.
"tests/*" = ["N814", "N817"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: тяжёлые тесты (стресс/производительность); исключаются через -m 'not slow'",
]
